perf(VirtualScroll): (backport from Qv2) prevent repaint on elements that are not visible

--- a/ui/src/components/virtual-scroll/QVirtualScroll.styl
+++ b/ui/src/components/virtual-scroll/QVirtualScroll.styl
@@ -4,6 +4,7 @@
 
   &__content
     outline: none
+    contain: content
 
     *
       overflow-anchor: none
